--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,4 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">App-Reservas-CAB</string>
     <string name="iniciosesion">Inicio de sesión</string>
 </resources>
