Filtro de búsqueda

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="equiposComputo">Equipos de Computo</string>
     <string name="imgItem">equipos</string>
     <string name="ambiente">Ambientes</string>
-<<<<<<< HEAD
+<!--<<<<<<< HEAD-->
     <string name="bienvenido">¡Bienvenid@!</string>
     <string name="disrecursos">Recursos Disponibles</string>
     <string name="txt_notificacion">notificacion</string>
