Actualizar funcionamiento de la aplicación, "host" a cargo por ngrok, y 100% funcional

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="imagen">Imagen de equipo:</string>
     <string name="txtCrearAmbiente">Crear ambiente</string>
     <string name="imagenAmbiente">Imagen ambiente:</string>
+    <string name="rol">Rol:</string>
 </resources>
