Función de calendario interactivo funcional (no completa)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="txtCrearAmbiente">Crear ambiente</string>
     <string name="imagenAmbiente">Imagen ambiente:</string>
     <string name="rol">Rol:</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
